Országlista kiegészítve Szerbiával

--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<div data-role="content">
-			<p>Dear Mr. Raymond	Camden,</p>
+			<p>Dear Mr. Raymond Camden,</p>
 
 			<p>Welcome to the Hotel HostWare. We are a luxury hotel
 				specializing in catering to the rich and overly privileged. You will
@@ -70,8 +70,10 @@
 				reach the hotel.</p>
 
 			<ul data-role="listview" data-inset="true">
-				<li data-icon="check"><a href="#guestlist" data-transition="slide">Checkin</a></li>
-				<li data-icon="location"><a href="#hotelinfo" data-transition="slide">Find Us</a></li>
+				<li data-icon="check"><a href="#guestlist"
+					data-transition="slide">Checkin</a></li>
+				<li data-icon="location"><a href="#hotelinfo"
+					data-transition="slide">Find Us</a></li>
 			</ul>
 		</div>
 	</div>
@@ -222,6 +224,7 @@
 						<option value="A">Austria</option>
 						<option value="D">Germany</option>
 						<option value="H">Hungary</option>
+						<option value="SRB">Serbia</option>
 						<option value="USA">USA</option>
 					</select>
 				</div>
