Országlista kiegészítése Cyprussal

--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -222,6 +222,7 @@
 					<label for="country">Country:</label> <select name="country"
 						id="country">
 						<option value="A">Austria</option>
+						<option value="CY">Cyprus</option>
 						<option value="D">Germany</option>
 						<option value="H">Hungary</option>
 						<option value="SRB">Serbia</option>
