Change-Id: Ibcde27c64a93c4e451431b955c6f23420ee3cc1b

--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -148,6 +148,8 @@
 					<label for="country">Country:</label> <select name="country"
 						id="country">
 						<option value="A">Austria</option>
+						<option value="CRO">Croatia</option>
+						
 						<option value="D">Germany</option>
 						<option value="H">Hungary</option>
 						<option value="USA">USA</option>
