Change-Id: Id588c66ae4bcd9354b4f394aa9a43c479f047e87

--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -151,6 +151,7 @@
 						<option value="CRO">Croatia</option>
 						<option value="D">Germany</option>
 						<option value="H">Hungary</option>
+						<option value="SLO">Slovenia</option>
 						<option value="USA">USA</option>
 					</select>
 				</div>
