--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -150,6 +150,7 @@
 						<option value="A">Austria</option>
 						<option value="CRO">Croatia</option>
 						<option value="D">Germany</option>
+						<option value="F">France</option>
 						<option value="H">Hungary</option>
 						<option value="SLO">Slovenia</option>
 						<option value="USA">USA</option>
