--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -153,6 +153,7 @@
 						<option value="F">France</option>
 						<option value="H">Hungary</option>
 						<option value="SLO">Slovenia</option>
+						<option value="UK">United Kingdom</option>
 						<option value="USA">USA</option>
 					</select>
 				</div>
