--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -149,6 +149,7 @@
 						id="country">
 						<option value="A">Austria</option>
 						<option value="CRO">Croatia</option>
+						<option value="CY">Cyprus</option>
 						<option value="D">Germany</option>
 						<option value="F">France</option>
 						<option value="H">Hungary</option>
