--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -148,6 +148,7 @@
 					<label for="country">Country:</label> <select name="country"
 						id="country">
 						<option value="A">Austria</option>
+						<option value="CY">Cyprus</option>
 						<option value="CRO">Croatia</option>
 						<option value="D">Germany</option>
 						<option value="F">France</option>
