--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -151,6 +151,7 @@
 						<option value="CRO">Croatia</option>
 						<option value="CY">Cyprus</option>
 						<option value="D">Germany</option>
+						<option value="E">Spain</option>
 						<option value="F">France</option>
 						<option value="H">Hungary</option>
 						<option value="I">Italy</option>
