--- a/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
+++ b/com.letscloud.expresscheckin/ExpressCheckin/war/ExpressCheckin.html
@@ -54,7 +54,7 @@
 
 	<div data-role="page" id="homePage">
 		<div data-role="header">
-			<h1>Hotel HostWare</h1>
+			<h1>Hotel HostWare2</h1>
 		</div>
 
 		<div data-role="content">
